--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,13 @@
         "php": ">=5.6.0",
         "yiisoft/yii2": "~2.0.14",
         "yiisoft/yii2-bootstrap4": "~2.0.0",
-        "yiisoft/yii2-swiftmailer": "~2.0.0 || ~2.1.0"
+        "yiisoft/yii2-swiftmailer": "^2.1",
+        "yiisoft/yii2-jui": "^2.0",
+        "yiisoft/yii2-queue": "^2.3",
+        "enqueue/amqp-lib": "^0.10.9",
+        "aryelds/yii2-sweet-alert": "@dev",
+        "kartik-v/yii2-widget-datepicker": "dev-master",
+        "buibr/yii2-datepicker-bs4": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
